--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <button class="tab active" onclick="switchTab('books')">📚 Books</button>
             <button class="tab" onclick="switchTab('event')">📅 Event</button>
             <button class="tab" onclick="switchTab('links')">🔗 Links</button>
+            <button class="tab" onclick="switchTab('cards')">🃏 Three Card Layout</button>
         </div>
 
         <!-- Books Tab -->
@@ -376,6 +377,148 @@
                     <p>This is how your links will look on the blog:</p>
                     <div id="links-preview-container" class="preview-container"></div>
                 </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Cards Tab -->
+        <div id="cards-tab" class="tab-content">
+            <div class="step-box">
+                <div class="step-header"><strong>Step 1:</strong> Choose Your Layout</div><br>
+                <div class="content-box">
+                    <h4>How should your cards display?</h4>
+                    <div class="toggle-group">
+                        <label class="toggle-btn"><input type="radio" name="card-layout" value="horizontal" checked><span>Horizontal Row</span></label>
+                        <label class="toggle-btn"><input type="radio" name="card-layout" value="vertical"><span>Vertical Stack</span></label>
+                    </div>
+                <br></div>
+            </div>
+
+            <div class="step-box">
+                <div class="step-header"><strong>Step 2:</strong> Enter Card Details</div><br>
+
+                <!-- Card 1 -->
+                <div class="content-box">
+                    <h4>Card 1</h4>
+                    <div class="form-group">
+                        <label>Title:*</label>
+                        <input type="text" id="card1-title" placeholder="Card title">
+                    </div>
+                    <div class="form-group">
+                        <label>Description:</label>
+                        <textarea id="card1-description" style="min-height: 80px;" placeholder="Brief description for this card..."></textarea>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Image URL:</label>
+                            <input type="url" id="card1-image" placeholder="https://...">
+                        </div>
+                        <div class="form-group">
+                            <label>Image Alt Text:</label>
+                            <input type="text" id="card1-alt" placeholder="Description of image">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Link URL:</label>
+                            <input type="url" id="card1-link" placeholder="https://...">
+                        </div>
+                        <div class="form-group">
+                            <label>Link Text:</label>
+                            <input type="text" id="card1-link-text" placeholder="Read more">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="content-box">
+                    <h4>Card 2</h4>
+                    <div class="form-group">
+                        <label>Title:*</label>
+                        <input type="text" id="card2-title" placeholder="Card title">
+                    </div>
+                    <div class="form-group">
+                        <label>Description:</label>
+                        <textarea id="card2-description" style="min-height: 80px;" placeholder="Brief description for this card..."></textarea>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Image URL:</label>
+                            <input type="url" id="card2-image" placeholder="https://...">
+                        </div>
+                        <div class="form-group">
+                            <label>Image Alt Text:</label>
+                            <input type="text" id="card2-alt" placeholder="Description of image">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Link URL:</label>
+                            <input type="url" id="card2-link" placeholder="https://...">
+                        </div>
+                        <div class="form-group">
+                            <label>Link Text:</label>
+                            <input type="text" id="card2-link-text" placeholder="Read more">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="content-box">
+                    <h4>Card 3</h4>
+                    <div class="form-group">
+                        <label>Title:*</label>
+                        <input type="text" id="card3-title" placeholder="Card title">
+                    </div>
+                    <div class="form-group">
+                        <label>Description:</label>
+                        <textarea id="card3-description" style="min-height: 80px;" placeholder="Brief description for this card..."></textarea>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Image URL:</label>
+                            <input type="url" id="card3-image" placeholder="https://...">
+                        </div>
+                        <div class="form-group">
+                            <label>Image Alt Text:</label>
+                            <input type="text" id="card3-alt" placeholder="Description of image">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Link URL:</label>
+                            <input type="url" id="card3-link" placeholder="https://...">
+                        </div>
+                        <div class="form-group">
+                            <label>Link Text:</label>
+                            <input type="text" id="card3-link-text" placeholder="Read more">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-group">
+                    <button onclick="formatCards()">Format Cards</button>
+                    <button class="secondary" onclick="clearCards()">Clear All</button>
+                </div>
+                <div id="cards-status" class="status"></div>
+            </div>
+
+            <div class="step-box">
+                <div class="step-header"><strong>Step 3:</strong> Retrieve Formatted HTML</div><br>
+                <div class="content-box">
+                    <h4>Copy and paste HTML into source tab:</h4>
+                    <textarea id="cards-output" class="code" placeholder="Formatted HTML will appear here..." readonly></textarea>
+
+                    <div class="button-group">
+                        <button onclick="previewCards()">Preview Styled HTML</button>
+                        <button class="secondary" onclick="copyCards()">Copy to Clipboard</button>
+                    </div>
+                </div>
+
+                <div id="cards-preview" class="preview-section">
+                    <h2>Live Preview</h2>
+                    <p>This is how your card layout will look on the blog:</p>
+                    <div id="cards-preview-container" class="preview-container"></div>
                 </div>
             </div>
         </div>
@@ -1304,6 +1447,124 @@ ${formattedBooks.join('\n')}
             document.getElementById('links-preview').classList.remove('show');
             document.getElementById('links-status').style.display = 'none';
             document.getElementById('links-upload-status').style.display = 'none';
+        }
+
+        // ===== CARDS TAB FUNCTIONS =====
+        function formatCards() {
+            const layout = document.querySelector('input[name="card-layout"]:checked').value;
+
+            // Gather card data
+            const cards = [];
+            for (let i = 1; i <= 3; i++) {
+                const title = document.getElementById(`card${i}-title`).value.trim();
+                const description = document.getElementById(`card${i}-description`).value.trim();
+                const image = document.getElementById(`card${i}-image`).value.trim();
+                const alt = document.getElementById(`card${i}-alt`).value.trim();
+                const link = document.getElementById(`card${i}-link`).value.trim();
+                const linkText = document.getElementById(`card${i}-link-text`).value.trim();
+
+                cards.push({ title, description, image, alt, link, linkText });
+            }
+
+            // Validate - each card needs at least a title
+            const missingTitles = cards.filter(c => !c.title);
+            if (missingTitles.length === 3) {
+                showStatus('cards', 'Please fill in at least one card with a title.', 'error');
+                return;
+            }
+            if (missingTitles.length > 0) {
+                showStatus('cards', 'Each card needs at least a title. Please fill in all three cards.', 'error');
+                return;
+            }
+
+            // Build the card-layout element attributes
+            let attributes = [];
+            attributes.push(`  layout="${layout}"`);
+
+            for (let i = 1; i <= 3; i++) {
+                const card = cards[i - 1];
+                if (card.image) attributes.push(`  card${i}-image="${escapeAttr(card.image)}"`);
+                if (card.alt) attributes.push(`  card${i}-alt="${escapeAttr(card.alt)}"`);
+                attributes.push(`  card${i}-title="${escapeAttr(card.title)}"`);
+                if (card.description) attributes.push(`  card${i}-description="${escapeAttr(card.description)}"`);
+                if (card.link) attributes.push(`  card${i}-link="${escapeAttr(card.link)}"`);
+                if (card.linkText) attributes.push(`  card${i}-link-text="${escapeAttr(card.linkText)}"`);
+            }
+
+            const html = `<!---------- BEGIN CARD LAYOUT ---------->
+<card-layout
+${attributes.join('\n')}
+></card-layout>
+
+<script type="module" src="https://media.library.caltech.edu/cl-webcomponents/cl-web-components.js"><\/script>
+<!---------- END CARD LAYOUT ---------->`;
+
+            document.getElementById('cards-output').value = html;
+            showStatus('cards', 'Card layout formatted successfully!', 'success');
+        }
+
+        function escapeAttr(str) {
+            return str.replace(/&/g, '&amp;')
+                      .replace(/"/g, '&quot;')
+                      .replace(/</g, '&lt;')
+                      .replace(/>/g, '&gt;');
+        }
+
+        function previewCards() {
+            const output = document.getElementById('cards-output').value;
+            const previewSection = document.getElementById('cards-preview');
+            const previewContainer = document.getElementById('cards-preview-container');
+
+            if (!output) {
+                showStatus('cards', 'Please format your cards first.', 'error');
+                previewSection.classList.remove('show');
+                return;
+            }
+
+            // Load the card-layout web component script if not already loaded
+            if (!document.querySelector('script[src*="cl-web-components.js"]')) {
+                const script = document.createElement('script');
+                script.type = 'module';
+                script.src = 'https://media.library.caltech.edu/cl-webcomponents/cl-web-components.js';
+                document.head.appendChild(script);
+            }
+
+            // Extract just the card-layout element (without script tag) for preview
+            const cardLayoutMatch = output.match(/<card-layout[\s\S]*?<\/card-layout>/);
+            if (cardLayoutMatch) {
+                previewContainer.innerHTML = cardLayoutMatch[0];
+            } else {
+                previewContainer.innerHTML = output;
+            }
+
+            previewSection.classList.add('show');
+            previewSection.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+        }
+
+        function copyCards() {
+            const output = document.getElementById('cards-output');
+            if (!output.value) {
+                showStatus('cards', 'Nothing to copy. Please format your cards first.', 'error');
+                return;
+            }
+            output.select();
+            document.execCommand('copy');
+            showStatus('cards', 'Copied to clipboard!', 'success');
+        }
+
+        function clearCards() {
+            for (let i = 1; i <= 3; i++) {
+                document.getElementById(`card${i}-title`).value = '';
+                document.getElementById(`card${i}-description`).value = '';
+                document.getElementById(`card${i}-image`).value = '';
+                document.getElementById(`card${i}-alt`).value = '';
+                document.getElementById(`card${i}-link`).value = '';
+                document.getElementById(`card${i}-link-text`).value = '';
+            }
+            document.getElementById('cards-output').value = '';
+            document.getElementById('cards-preview-container').innerHTML = '';
+            document.getElementById('cards-preview').classList.remove('show');
+            document.getElementById('cards-status').style.display = 'none';
         }
 
         // ===== UTILITY FUNCTIONS =====
